--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<link rel="stylesheet" type="text/css" href="style.css"> 
+<title>Welcome Back World</title>
+<!-- This is a comment! -->
+</head>
+<body></body>
+</html>
